force-app/main/default/objects/Environment_Config__mdt/Environment_Config__mdt.object-meta.xml
<CustomObject>
    <label>Environment Config</label>
    <pluralLabel>Environment Configs</pluralLabel>
    <description>Custom Metadata Type for environment-specific configuration values. Deploy different records per environment (Developer, Sandbox, Production) to drive environment-aware behavior without code changes.</description>
</CustomObject>