force-app/main/default/objects/Environment_Config__mdt/fields/Api_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Api_Endpoint__c</fullName>
    <label>API Endpoint</label>
    <type>Url</type>
    <description>Base URL for the external API in this environment. Overrides the default hardcoded fallback in EnvironmentService.</description>
</CustomField>