force-app/main/default/objects/Environment_Config__mdt/fields/Config_Key__c.field-meta.xml
<CustomField>
    <fullName>Config_Key__c</fullName>
    <label>Config Key</label>
    <type>Text</type>
    <length>100</length>
    <description>Key name for an arbitrary config value returned by getEnvironmentConfig(). Example: MAX_BATCH_SIZE, ENABLE_NOTIFICATIONS</description>
</CustomField>