force-app/main/default/objects/Environment_Config__mdt/fields/Config_Value__c.field-meta.xml
<CustomField>
    <fullName>Config_Value__c</fullName>
    <label>Config Value</label>
    <type>Text</type>
    <length>255</length>
    <description>Value for the config key in this environment.</description>
</CustomField>