force-app/main/default/objects/Environment_Config__mdt/fields/Environment_Type__c.field-meta.xml
<CustomField>
    <fullName>Environment_Type__c</fullName>
    <label>Environment Type</label>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
    <description>Matches EnvironmentService.OrgEnvironment enum values: SCRATCH, DEVELOPER_SANDBOX, PARTIAL_SANDBOX, FULL_SANDBOX, PRODUCTION</description>
</CustomField>