force-app/main/default/objects/Environment_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Inactive records are ignored by EnvironmentService queries. Use to disable a config value without deleting it.</description>
</CustomField>